--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
-
-<html>
-    <h1>
-        Hey, I'm DktrDee
-    </h1>
-    <body>
-        <h2>About me</h2>
-        <p>
-            I am a coffee addict who likes Hacking and MMA.
-        </p>
-        <h2>What I'm working on</h2>
-        <p>
-            I'm obsessed with AI right now and I'm working on the CPTS from HTB.
-        </p>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Image Display</title>
+    <style>
+        body {
+            margin: 0;
+            background-color: #a16b3b; /* Background color */
+        }
+        img {
+            display: block;
+            max-width: 100%; /* Responsive image */
+            height: auto; /* Maintain aspect ratio */
+            margin: 0 auto; /* Center the image */
+        }
+        .container {
+            text-align: center; /* Center align the image */
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <img src="stupidsite.png" alt="Your Image">
+    </div>
+</body>
 </html>
