--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="stupidsite.png" alt="Your Image">
+        <img src="https://github.com/DrDee3a12/DeeRepo/blob/main/StupidSite.png" alt="Your Image">
     </div>
 </body>
 </html>
