--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </a>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="https://raw.githubusercontent.com/DrDee3a12/DeeRepo/refs/heads/main/About.html">About</a></li>
+            <li><a href="About.html">About</a></li>
             <li><a href="#projects">Projects</a></li>
         </ul>
     </div>
