--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         </a>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="About.html">About</a></li>
             <li><a href="#projects">Projects</a></li>
         </ul>
     </div>
